adding on to the BST class Structure

--- a/BSTmain.html
+++ b/BSTmain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="BSTmain.js"></script>
+		<script type="module" src="BSTmain.js"></script>
 		<title>Javascript BST</title>
 	</head>
 	<body>
